<resources>
    <string name="app_name">gamr</string>
    <string name="price_format_euro">%1$.2f€</string>

    <!-- Cadenas para MainActivity -->
    <string name="subtitle_text">Todo lo que necesitas para jugar, está aquí.</string>
    <string name="register_button_text">Registrarse</string>
    <string name="login_button_text">Iniciar sesión</string>

    <!-- Cadenas para LoginActivity -->
    <string name="login_title">Iniciar sesión</string>
    <string name="login_subtitle">¡Bienvenido de nuevo!</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_enter_button">Entrar</string>
    <string name="new_user_prompt">¿Nuevo usuario?</string>
    <string name="register_link"> Registrarse</string>

    <!-- Cadenas para RegisterActivity -->
    <string name="register_title">Regístrate</string>
    <string name="register_subtitle">No te pierdas ninguna novedad</string>
    <string name="confirm_email_hint">Confirmar correo electrónico</string>
    <string name="confirm_password_hint">Confirmar contraseña</string>
    <string name="create_account_button">Crear cuenta</string>
    <string name="already_have_account_prompt">¿Ya tienes cuenta?</string>
    <string name="login_link"> Iniciar sesión</string>

    <!-- Cadenas para HomeActivity -->
    <string name="home_on_sale_title">Juegos en venta</string>

    <!-- Cadenas para GameDetailActivity -->
    <string name="add_to_cart_button">Agregar al carrito</string>
    <string name="buy_now_button">Comprar ahora</string>

    <!-- Cadenas para ProfileActivity -->
    <string name="logout_button">Cerrar sesión</string>

    <!-- Cadenas para el header -->
    <string name="content_description_cart">Carrito de compras</string>
    <string name="content_description_app_logo">Logo de la app</string>
    <string name="content_description_search">Buscar</string>
    <string name="content_description_return">Volver</string>

    <!-- Cadenas para el menú de navegación inferior -->
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_games">Games</string>
    <string name="bottom_nav_favorites">Favorites</string>
    <string name="bottom_nav_profile">Profile</string>
</resources>